[tool.poetry]
name = "repl_python3_VulnStable"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
prsaw2 = "^0.42"
discord-interactive = "^4.0"
replit = "^3.2.4"
CairoSVG = "^2.5.2"
pycairo = "^1.20.1"
svglib = "^1.1.0"
reportlab = "^3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
